# ingressor

./: .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  pyproject.toml  test-config.yaml
.github/workflows/: ci.yml
docs/: README.md  deployment.md
examples/: docker-compose.yml  sample-config.yaml
ingressor/: __init__.py  api.py  cli.py  core.py  discovery.py  ingressor.py  logging_config.py  models.py  web.py
scripts/: dev_setup.sh
tests/: __init__.py  test_api.py  test_cli.py  test_core.py  test_discovery.py  test_ingressor.py  test_logging.py  test_models.py
